# Lightdash

./: .env.example  .gitignore  .vercelignore  Cargo.toml  Dockerfile  LICENSE  README.md  alert_rules.yml  alertmanager.yml  build.sh  correct.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  global.d.ts  index.html  install.sh  netlify.toml  next.config.js  nginx.conf  package-lock.json  package.json  prometheus.yml  run.sh  rust-toolchain.toml  structure_projet.txt  styles.css  tailwind.config.js  types.d.ts  vercel.json
.github/workflows/: vercel-deploy.yml
api/: Cargo.toml  index.rs  lightning.rs  search.rs
api/templates/: index.html
app/: layout.tsx  page.tsx
app/actions/: page.tsx
app/api/analyze/: route.ts
app/api/test-sparkseer/: route.ts
app/channels/: page.tsx
app/channels/[pubkey]/: page.tsx
app/components/: LanguageSelector.tsx  LightningAuth.tsx  ThemeToggle.tsx  layout.tsx
app/messages/: page.tsx
app/settings/: page.tsx
app/utils/: alby.ts  lightning.ts  openai.ts  sparkseer.ts  types.ts
backend/: Cargo.toml  build.sh
backend/src/data/: actions.json
backend/src/mcp/: data_collector.rs  mod.rs  trainer.rs
backend/src/models/: action.rs  mod.rs
backend/src/services/: actions.rs  amboss.rs
components/: icons.tsx  layout.tsx
components/ui/: dropdown-menu.tsx
frontend/: .babelrc  .env.example  .eslintrc.json  Cargo.toml  Dockerfile  Dockerfile.dev  Trunk.toml  build.rs  build.sh  correct.sh  index.html  nginx.conf  package-lock.json  package.json  styles.css  tailwind.config.js  test.sh  vercel.json  vite.config.js  webpack.config.js
frontend/.cargo/: config.toml
frontend/public/: robots.txt  sitemap.xml
frontend/src/: app.rs  chart.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  routes.rs  services.rs  styles.css  types.rs
frontend/src/components/: actions.rs  button.rs  card.rs  chart.rs  dashboard.rs  fee_simulator.rs  footer.rs  mcp_channels.rs  mcp_stats.rs  meta.rs  mod.rs  nav.rs  navbar.rs  node_info.rs  search_input.rs
frontend/src/js/: chart.js
frontend/src/pages/: about.rs  actions.rs  alby.rs  channels.rs  dashboard.rs  home.rs  mod.rs  recommendations.rs  transactions.rs  yields.rs
frontend/src/services/: api.rs  logging.rs  mod.rs  node.rs  sparkseer.rs  tests.rs
frontend/src/tests/: mod.rs
frontend/src/types/: mod.rs
frontend/styles/: main.css
grafana/dashboards/: apis.json  lightdash.json  lightning.json
lightdash-rust/: .gitignore  README.md  vercel.json
lightdash-rust/.github/workflows/: ci.yml  deploy.yml
lightdash-rust/src/: lib.rs  main.rs
lightdash-rust/src/handlers/: lightning.rs
lightdash-rust/src/models/: lightning.rs
lightdash-rust/src/services/: lightning.rs
lightdash-rust/static/css/: styles.css
lightdash-rust/static/js/: app.js
lightdash-rust/templates/: base.html
project/: package-lock.json  types.d.ts
project/app/: layout.tsx  page.tsx
project/components/: layout.tsx
src/: lib.rs  main.rs  metrics.rs  models.rs  services.rs  telemetry.rs
src/components/: actions.rs  dashboard.rs  nav.rs
src/handlers/: index.rs  lightning.rs  mod.rs
src/models/: lightning.rs
src/services/: lightning.rs  mod.rs
templates/: channels.html  index.html  transactions.html
