[package]
name = "lightdash-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
lambda_http = "0.8"
lambda_runtime = "0.8"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "lightning"
path = "api/lightning.rs" 