[package]
name = "lightdash_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
lambda_http = "0.8"
lambda_runtime = "0.8"

# Nouvelles dépendances pour le monitoring
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.20"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"

# Prometheus metrics
prometheus = "0.13"
actix-web-prom = "0.7"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "lightning"
path = "api/lightning.rs" 