[package]
name = "lightdash-api"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.24", features = ["json"] }

[[bin]]
name = "index"
path = "index.rs"

[[bin]]
name = "search"
path = "search.rs" 