[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console"
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
log = "0.4"
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4"